<resources>

    <string name="app_name">Project</string>
    <string name="create_btn">Create Event</string>
    <string name="home_btn">Home</string>
    <string name="remove_btn">Remove Event</string>

    <string name="add_item">Add Item</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="repeat">Repeat</string>
    <string name="once">Once</string>
    <string name="weekly">Weekly</string>
    <string name="bi_weekly">bi-weekly</string>
    <string name="monthly">Monthly</string>
    <string name="save">Save</string>
    <string name="time">Time</string>
    <string name="clock">00 : 00</string>
    <string name="event">Edit Event</string>
    <string name="add_event">Add Event</string>
    <string name="copy_availability">Copy Availability</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="eventname">Name of Event</string>
    <string name="descriptionevent">Description of Event</string>
    <string name="starttime">Start Time</string>
    <string name="endam">AM</string>
    <string name="endpm">PM</string>
    <string name="endtime">End Time</string>
    <string name="backbutton">Go Back</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="action_settings">Settings</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="help">Need Help</string>

    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="button_signin">Sign In</string>
    <string name="button_cancel">Cancel</string>

    <string name="googlemapapi">AIzaSyB3I31Qms_Mnlpxuzt_TmRqTbGzL3zZUo8</string>
    <string name="mapButton">Go To Map</string>
    <string name="androidImage">Android Image</string>
</resources>
