<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <!--<ImageView-->
    <!--android:id="@+id/imageView"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:src="@drawable/android"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_centerHorizontal="true"/>-->

    <!--<TextView-->
    <!--android:id="@+id/label_username"-->
    <!--android:layout_marginTop="50dp"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_below="@+id/imageView"-->
    <!--android:hint="Enter users please!"-->
    <!--android:text="@string/label_username"/>-->

    <TextView
        android:id="@+id/label_username"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:hint="Enter users please!"
        android:text="@string/label_username"/>

    <EditText
        android:id="@+id/input_username"
        android:layout_toRightOf="@+id/label_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_username"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_username"
        android:layout_marginTop="50dp"
        android:hint="Enter users please!"
        android:text="@string/label_password" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_password"
        android:layout_alignLeft="@+id/input_username"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/label_password" />

    <Button
        android:id="@+id/button_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_password"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="50dp"
        android:onClick="signin"
        style="@style/ButtonStyle"
        android:text="@string/button_signin" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/button_signin"
        android:layout_below="@+id/input_password"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:onClick="goBack"
        android:text="@string/button_cancel" />



</RelativeLayout>
